# esp32_mqtt_client_ble_prov

./: .gitignore  CMakeLists.txt  README.md  certs_partition.csv  partitions.csv  sdkconfig  sdkconfig.old
client_certs/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key
components/app_b_ag/: CMakeLists.txt  app_b_ag.c
components/app_b_ag/include/: app_b_ag.h
components/app_ble/: CMakeLists.txt  app_ble.c
components/app_ble/include/: app_ble.h
components/app_globals/: CMakeLists.txt
components/app_globals/include/: app_globals.h
components/app_mqtt/: CMakeLists.txt  app_mqtt.c
components/app_mqtt/include/: app_mqtt.h
components/app_time/: CMakeLists.txt  app_time.c
components/app_time/include/: app_time.h
components/app_uart/: CMakeLists.txt  app_uart.c
components/app_uart/include/: app_uart.h
main/: Kconfig.projbuild  app_main.c  idf_component.yml
